--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ install:
     - pip install -r requirements.txt
 
 before_script:
-    - flake8 news-article-nlp || echo "flake8 check failed"
+    - flake8 news-article-nlp || echo "flake8 may have failed. Expand to see flake8 messages."
+    - pylint news-article-nlp || echo "pylint may have failed. Expand to see pylint messages."
 
 script:
     - coverage run -m unittest
