--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
     - pip install coverage
     - pip install coveralls
     - pip install flake8
+    - pip install pylint
     - pip install -r requirements.txt
 
 before_script:
