--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
     - pip install -r requirements.txt
 
 before_script:
+    - python setup.py
     - flake8 news-article-nlp || echo "flake8 may have failed. Expand to see flake8 messages."
     - pylint news-article-nlp || echo "pylint may have failed. Expand to see pylint messages."
 
