--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
     - pip install -r requirements.txt
 
 before_script:
-    - python setup.py
+    - python setup.py check
     - flake8 news_analyzer || echo "flake8 may have failed. Expand to see flake8 messages."
     - pylint news_analyzer || echo "pylint may have failed. Expand to see pylint messages."
 
